Fixing click handlers on iOS

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -67,7 +67,12 @@ p {
     box-shadow: 0 2px 5px #EEEEEE;
 }
 
+.navbar-burger {
+    cursor: pointer;
+}
+
 .navbar-item {
+    cursor: pointer;
     -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
